--- a/OuFood/app/src/main/res/layout/activity_home.xml
+++ b/OuFood/app/src/main/res/layout/activity_home.xml
@@ -19,91 +19,16 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
 
-
-    <LinearLayout
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:background="@drawable/border"
+        android:layout_height="65dp"
+        app:itemTextColor="@color/custom_color_bottom_nav"
+        app:itemIconTint="@color/custom_color_bottom_nav"
+        app:itemBackground="@color/white"
+        app:menu="@menu/bottom_nav_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="0.33"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/nav_menu"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="1dp"
-                android:src="@drawable/menu"
-                app:tint="@color/blue" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Menu"
-                android:textColor="@color/blue"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="0.33"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/nav_order"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="1dp"
-                android:src="@drawable/order"
-                app:tint="@color/blue" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Đơn hàng"
-                android:textColor="@color/blue"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="0.33"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/nav_account"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="1dp"
-                android:src="@drawable/account"
-                app:tint="@color/blue" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tài khoản"
-                android:textColor="@color/blue"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </LinearLayout>
-
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
